# hive-builder

./: .gitignore  .readthedocs.yaml  GITHUB-FLOW-ja.md  GITHUB-FLOW.md  LICENSE  MANIFEST.in  Pipfile  README.md  entry_points.cfg  pyproject.toml  release.sh  setup.cfg
.devcontainer/: activate.sh  devcontainer.json  post-create.sh
.github/workflows/: codeql-analysis.yml  release-default.yml  release-prerelease.yml  versioning-latest.yml  versioning-prerelease.yml
docs/: aws.rst  backup.rst  bashcompletion.rst  cashare.rst  command.rst  conf.py  develop.rst  example.rst  faq.rst  index.rst  install.rst  inventory.rst  migration.rst  nfs.rst  overview.rst  phases.rst  proxy.rst  repair.rst  requirements.txt  servicepatterns.rst  setuptools.txt  swarmextender.rst  tagmapping.rst  vagrant.rst  zabbix.rst
docs/customize/css/: my_theme.css
examples/pdns/: initialize-services.yml
examples/pdns/inventory/: hive.yml  powerdns.yml
examples/pdns/inventory/group_vars/: servers.yml  services.yml
examples/pdns/lib/: powerdns_record.py  powerdns_zone.py
examples/pdns/roles/addon/files/: ddclient.service  sysconfig-ddclient
examples/pdns/roles/addon/tasks/: ddclient.yml  main.yml
examples/pdns/roles/addon/templates/: ddclient.conf.j2
examples/pdns/roles/certbot-runner/files/: certbot-runner
examples/pdns/roles/certbot-runner/tasks/: main.yml
examples/pdns/roles/powerdns-admin/files/: config.py  create_admin.py  docker-entrypoint.sh
examples/pdns/roles/powerdns-admin/tasks/: main.yml
examples/pdns/roles/powerdns-init/tasks/: main.yml
examples/pdns/roles/powerdns-init/vars/: main.yml
examples/pdns/roles/powerdns-initdb/tasks/: main.yml
examples/pdns/roles/powerdns/files/: docker-entrypoint.sh
examples/pdns/roles/powerdns/tasks/: main.yml
examples/pdns/roles/proxy-configure/files/: proxy-configure
examples/pdns/roles/proxy-configure/tasks/: main.yml
hive/: hive.py  variables_metainf.yml
hive/playbooks/: build-images.yml  build-networks.yml  deploy-services.yml  push-image.yml  setup-hosts.yml
hive/playbooks/builtin_roles/addon/tasks/: main.yml
hive/playbooks/group_vars/: all.yml  images.yml  mother.yml
hive/playbooks/roles/auxiliary-networks/tasks/: main.yml
hive/playbooks/roles/aws/tasks/: create_instance.yml
hive/playbooks/roles/aws/templates/: azure_cli_credentials.j2  cloudstack.ini.j2
hive/playbooks/roles/backup-tools/templates/: hive-backup.sh
hive/playbooks/roles/base/tasks/: main.yml
hive/playbooks/roles/build-image/tasks/: main.yml
hive/playbooks/roles/build-image/templates/: playbook.yml.j2
hive/playbooks/roles/build-image/vars/: main.yml
hive/playbooks/roles/ca/files/: extfile.cnf
hive/playbooks/roles/docker-client/tasks/: main.yml
hive/playbooks/roles/docker-client/templates/: dcp  dexec
hive/playbooks/roles/docker-client/vars/: main.yml
hive/playbooks/roles/docker-compose/tasks/: main.yml
hive/playbooks/roles/docker/tasks/: main.yml
hive/playbooks/roles/docker/templates/: daemon.json.j2
hive/playbooks/roles/drbd/tasks/: main.yml
hive/plugins/: hive_inventory.py
hive_builder/: __init__.py  hive-completion.sh  hive.py  requirements.yml  variables_metainf.yml
hive_builder/lib/: azure_rm_storageshare.py  hive_vagrant.py  zabbix5_template.py
hive_builder/playbooks/: build-images.yml  build-infra.yml  build-networks.yml  build-volumes.yml  deploy-services.yml  initialize-services.yml  iptables.yml  push-image.yml  setup-hosts.yml
hive_builder/playbooks/group_vars/: all.yml  hosts.yml
hive_builder/plugins/: hive_inventory.py  hive_services.py
(+188 files in other folders)
