[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hive_builder"
author = [
    {name = "Mitsuru Nakakawaj", email = "mitsuru@procube.jp"}
]
license = {file = "LICENSE"}
readme = "README.md"
description = "Building docker swarm environment"
classifier = [
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"
    "Programming Language :: Python :: 3"
]
dependencies = [
    "ansible-core",
    "configparser",
    "lockfile",
    "python-vagrant",
    "requests",
    "google-auth",
    "boto",
    "boto3",
    "netaddr",
    "Pillow>=7.1.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://hive-builder.readthedocs.io"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "src.foo.version"}

[tool.setuptools_scm]
write_to = "src/foo/_version.py"

[tool.pycodestyle]
ignore = E111,E114,W504
max-line-length = 160

[tool.flake8]
ignore = E111,E114,W504
max-line-length = 160
