[tool.poetry]
name = "hive-builder"
version = "3.8.2"
description = "Building docker swarm environment"
authors = ["Mitsuru Nakakawaj <mitsuru@procube.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hive_builder"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible-core = "^2.14.4"
configparser = "^5.3.0"
lockfile = "^0.12.2"
python-vagrant = "^1.0.0"
requests = "^2.28.2"
google-auth = "^2.17.2"
boto = "^2.49.0"
boto3 = "^1.26.111"
netaddr = "^0.8.0"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hive = "hive_builder.hive:main"
