[metadata]
name = hive-builder
url = https://hive-builder.readthedocs.io
author = Mitsuru Nakakawaj
author_email = mitsuru@procube.jp
license = MIT
description = Building docker swarm environment
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires =
  ansible
  configparser
  lockfile
  python-vagrant
  requests
  google-auth
  backtrace
  boto
  boto3
entry_points = file: entry_points.cfg
setup_requires =
  setuptools_scm

[options.packages.find]
exclude =
  __pycache__

[pycodestyle]
ignore = E111,E114,W504
max-line-length = 160
[flake8]
ignore = E111,E114,W504
max-line-length = 160
